--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       var fxrand = sfc32(...hashes)
       // call this method to trigger the preview
       function fxpreview() {
-        console.log("fxhash: TRIGGER PREVIEW")
+        init();
       }
       //---- /do not edit the following code
     </script>
@@ -38,5 +38,8 @@
   <body>
 
     <!-- WEBPACK will inject the bundle.js here -->
+
+  
   </body>
+  <script src="./p5.min.js"></script>
 </html>
